# plexe-python

./: README.md  pyproject.toml  setup.cfg  setup.py
plexe/: __init__.py  client.py
plexe/tests/: test_integration.py
