[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "plexeai"
version = "0.1.0"
description = "Create ML models from natural language descriptions"
readme = "README.md"
requires-python = ">=3.7"
authors = [
    { name = "Plexe AI", email = "info@plexe.ai" }
]
dependencies = [
    "httpx>=0.24.0",
    "aiofiles>=0.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.20.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=plexeai --cov-report=term-missing"

[tool.coverage.run]
source = ["plexeai"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "raise ImportError"
]

[project.urls]
Homepage = "https://github.com/plexe-ai/plexe"
Repository = "https://github.com/plexe-ai/plexe"